--- a/style/index.css
+++ b/style/index.css
@@ -91,3 +91,30 @@
     text-align: justify;
     padding: 20px;
 }
+.service-container{
+    
+    background-image: url("/images/background.png"),linear-gradient(45deg,rgb(5,5,5),#2e2e2e);
+    color: white;
+    text-align: center;
+    padding: 20px;
+    flex-wrap: wrap;
+}
+.icon{
+    height: 70px;
+    color: #2e2e2e;
+    
+}
+.box-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 20px;
+}
+.box{
+    height: 200px;
+    width: 250px;
+    padding: 15px;
+    margin: 15px;
+    box-shadow: 4px 2px 15px gray;
+    border-radius: 10px;
+}
